<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.users.UserNotificationsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:id="@+id/imageBack"
                android:onClick="imageBack"
                android:contentDescription="@string/go_back"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageBack"
                android:layout_marginStart="25dp"
                android:text="@string/notifications_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:id="@+id/textTitle"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/notification_switch"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="@string/block_app_notifications"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/notification_switch"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/switch_layout"
            android:layout_marginTop="30dp"
            android:id="@+id/view"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_info"
            android:layout_below="@id/view"
            android:layout_marginTop="30dp"
            android:justificationMode="inter_word"/>

    </RelativeLayout>

</RelativeLayout>