<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.users.UserThemeChangeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:id="@+id/imageBack"
                android:onClick="imageBack"
                android:contentDescription="@string/go_back"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageBack"
                android:layout_marginStart="25dp"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:id="@+id/textTitle"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:columnCount="2"
                android:padding="10dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:id="@+id/grid_layout">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_columnWeight="1"
                    android:id="@+id/layout_light">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="250dp"
                        android:src="@drawable/user_light_theme"
                        android:scaleType="fitXY"
                        android:id="@+id/image_light"
                        android:layout_centerHorizontal="true"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_light"
                        android:layout_centerHorizontal="true"
                        android:text="@string/light_theme"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:id="@+id/radio_button_light"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_columnWeight="1"
                    android:id="@+id/layout_dark">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="250dp"
                        android:src="@drawable/user_dark_theme"
                        android:scaleType="fitXY"
                        android:id="@+id/image_dark"
                        android:layout_centerHorizontal="true"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_dark"
                        android:layout_centerHorizontal="true"
                        android:text="@string/dark_theme"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:id="@+id/radio_button_dark"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_columnWeight="1"
                    android:id="@+id/layout_system">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="250dp"
                        android:src="@drawable/user_system_theme"
                        android:scaleType="fitXY"
                        android:id="@+id/image_system"
                        android:layout_centerHorizontal="true"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_system"
                        android:layout_centerHorizontal="true"
                        android:text="@string/system_theme"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:id="@+id/radio_button_system"/>

                </RelativeLayout>
            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/grid_layout"
                android:layout_marginTop="10dp"
                android:text="@string/theme_info"
                android:justificationMode="inter_word"
                android:layout_margin="10dp"
                tools:targetApi="o" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>