<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.users.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:id="@+id/imageBack"
                android:onClick="imageBack"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageBack"
                android:layout_marginLeft="25dp"
                android:text="About App"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:id="@+id/textTitle"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/relative_about_layout"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/relative_about_layout_design">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/imagelogo"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagelogo"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/text_app_name"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_app_name"
                android:layout_marginTop="02dp"
                android:textStyle="bold"
                android:text="@string/Version_number"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_centerHorizontal="true"
                android:id="@+id/version_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/version_name"
                android:layout_marginTop="25dp"
                android:text="@string/about_information"
                android:id="@+id/textdesc"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:id="@+id/developer"
                android:text="@string/developed_by"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="05dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/developer_name_for_whole_project"
                android:text="@string/developer_name_for_whole_project"
                android:layout_below="@+id/developer" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>