<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.AdminPaymentsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:id="@+id/imageBack"
                android:onClick="imageBack"
                android:contentDescription="@string/go_back"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageBack"
                android:layout_marginStart="25dp"
                android:text="@string/payments"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:id="@+id/textTitle"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/swipeRefreshLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/admin_text_no_payment"
                android:text="@string/no_payments_yet" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/admin_payment_user_list"
                android:padding="16dp"/>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.tuyenmonkey.mkloader.MKLoader
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        app:mk_color="@color/colorPrimaryDark"
        app:mk_type="TwinFishesSpinner"
        android:id="@+id/loader"
        android:visibility="gone"/>

</RelativeLayout>