<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.users.HistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:id="@+id/imageBack"
                android:onClick="imageBack"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageBack"
                android:layout_marginLeft="25dp"
                android:text="History"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                android:id="@+id/textTitle"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/history_main_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/layout_history_header"
            android:padding="16dp"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_donated"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/text_history_donated_amount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_toEndOf="@id/text_history_donated_amount"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/history_donated_amount"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_donations"
                android:textStyle="bold"
                android:layout_below="@id/text_history_donated_amount"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/text_history_donated_count"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_toEndOf="@id/text_history_donated_count"
                android:layout_below="@id/text_history_donated_amount"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/history_donated_count"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_donated_on"
                android:textStyle="bold"
                android:layout_below="@id/text_history_donated_count"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/text_history_last_donated"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_toEndOf="@id/text_history_donated_amount"
                android:textColor="@android:color/white"
                android:layout_below="@id/text_history_donated_count"
                android:layout_marginTop="21dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:id="@+id/history_last_donated"/>

        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_history_header"
            android:id="@+id/list_payment_history"/>

    </RelativeLayout>

    <com.tuyenmonkey.mkloader.MKLoader
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        app:mk_color="@color/colorPrimaryDark"
        app:mk_type="TwinFishesSpinner"
        android:id="@+id/loader"
        android:visibility="gone"/>

</RelativeLayout>
